--- a/index.html
+++ b/index.html
@@ -128,8 +128,10 @@
         </div>
 
         <div class="cardsPrincipal">
-            <img class="img-card-1" src="https://storage-asset.msi.com/global/picture/image/feature/nb/Prestige/Prestige15/kv-nb.png"
-                alt="">
+            <a href="./portatiles.html">
+                <img class="img-card-1" src="https://storage-asset.msi.com/global/picture/image/feature/nb/Prestige/Prestige15/kv-nb.png"
+                    alt="">
+            </a>
             <img class="img-card-1"
                 src="https://www.intel.la/content/dam/products/hero/foreground/desktops-hero-16x9.png.rendition.intel.web.480.270.png" alt="">
         </div>
@@ -158,7 +160,7 @@
     </footer>
 
 
-    <script src="./scripts/script.js" type="module"></script>
+    <!-- <script src="./scripts/script.js" type="module"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous">
     </script>
