--- a/portatiles.html
+++ b/portatiles.html
@@ -32,11 +32,11 @@
                     <a href="#" class="boton-cerrar">❌</a>
                     <div class="contenido-cuerpo">
                         <div class="contenido">
-                            <h2>TITULO</h2>
+                            <h2 id="titulo-modal">TITULO</h2>
                             <img src="https://asset.msi.com/resize/image/global/product/product_9_20190903100138_5d6dc982beadc.png62405b38c58fe0f07fcef2367d8a9ba1/1024.png"
                             alt="" class="img-items-modal">
-                            <p>PRECIO</p>
-                            <a href="#" class="agregar-carrito">AGREGAR AL CARRITO</a>
+                            <p id="precio-modal">PRECIO</p>
+                            <a href="#miModal" class="agregar-carrito btn-informacion">AGREGAR AL CARRITO</a>
                         </div>
                     </div>
                 </div>
@@ -55,24 +55,7 @@
             </div>
         </template>
 
-        <template class="template-footer">
-            <div id="modal">
-                <div id="miModal" class="modal">
-                    <div class="modal-contenido">
-                        <a href="#" class="boton-cerrar">❌</a>
-                        <div class="contenido-cuerpo">
-                            <div class="contenido">
-                                <h2>TITULO</h2>
-                                <img src="https://asset.msi.com/resize/image/global/product/product_9_20190903100138_5d6dc982beadc.png62405b38c58fe0f07fcef2367d8a9ba1/1024.png"
-                                alt="" class="img-items-modal">
-                                <p>PRECIO</p>
-                                <a href="#" class="agregar-carrito">asdasd</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </template>
+        
 
         
 
