--- a/escritorio.html
+++ b/escritorio.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/portatiles.css" />
-    <title>Portatiles</title>
+    <link rel="stylesheet" href="./styles/escritorio.css" />
+    <title>Escritorio</title>
   </head>
 
   <body>
@@ -65,6 +65,6 @@
 
     </main>
 
-    <script src="./scripts/portatiles.js"></script>
+    <script src="./scripts/escritorio.js"></script>
   </body>
 </html>
