UPDATE aplicacion funcional

--- a/carrito.html
+++ b/carrito.html
@@ -23,7 +23,7 @@
         <div class="barra">
             <div class="items-barra">
               <h2></h2>
-              <a href="#">🛒</a>
+              <a href="./carrito.html">🛒</a>
             </div>
           </div>
 
