--- a/escritorio.html
+++ b/escritorio.html
@@ -20,7 +20,7 @@
       <div class="barra">
         <div class="items-barra">
           <h2></h2>
-          <a href="#">🛒</a>
+          <a href="./carrito.html">🛒</a>
         </div>
       </div>
 
@@ -28,7 +28,7 @@
         <div id="modal">
             <div id="miModal" class="modal">
                 <div class="modal-contenido">
-                    <a href="#" class="boton-cerrar">❌</a>
+                    <a href="./escritorio.html" class="boton-cerrar">❌</a>
                     <div class="contenido-cuerpo">
                         <div class="contenido">
                             <h2 id="titulo-modal">TITULO</h2>
